--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -40,6 +40,34 @@
 		<!-- Bottom Aux Nav -->
 		<ul class="nav nav-aux flex-shrink-0">
 
+			<!-- Messages Nav   -->
+			<li class="element nav-popover nav-popover-bottom"
+				*isAuthenticated>
+				<a [ngClass]="{'highlight-link': messagesNavOpen}"
+				   [popover]="messagesNav"
+				   container="body"
+				   containerClass="site-nav-popover-container-messages"
+				   #messagesNavPopover="bs-popover"
+				   placement="left"
+				   [outsideClick]="true"
+				   (onShown)="messagesNavOpen = true;"
+				   (onHidden)="messagesNavOpen = false;">
+					<span class="fa fa-fw fa-bell" attr.newMessagesCount="{{numNewMessages}}"
+						[ngClass]="{'messages-icon-new-messages-badge': numNewMessages > 0 }"></span>
+					<span [hidden]="!navbarOpen">Notifications</span>
+				</a>
+				<ng-template #messagesNav>
+					<ul class="popover-menu" role="menu">
+						<!-- List Messages -->
+						<li>
+							<a>
+								<app-list-messages></app-list-messages>
+							</a>
+						</li>
+					</ul>
+				</ng-template>
+			</li>
+
 			<!-- Team Nav   -->
 			<li class="element nav-popover nav-popover-bottom"
 				*isAuthenticated>
@@ -63,7 +91,6 @@
 							<a routerLink="/teams"
 							   (click)="teamNavPopover.hide()">View All</a>
 						</li>
-
 					</ul>
 				</ng-template>
 			</li>
