view all messages user page

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -61,7 +61,7 @@
 						<!-- List Messages -->
 						<li>
 							<a>
-								<app-list-messages></app-list-messages>
+								<app-recent-messages [container]="messagesNavPopover"></app-recent-messages>
 							</a>
 						</li>
 					</ul>
