--- a/src/app/core/messages/recent-messages/recent-messages.component.html
+++ b/src/app/core/messages/recent-messages/recent-messages.component.html
@@ -8,7 +8,7 @@
           </div>
           <div class="flex-grow-1">
             <div class="card-body">
-              <h3>{{message.title}}</h3>
+              <h3>{{message.title | titlecase}}</h3>
               <p>{{message.body}}</p>
             </div>
           </div>
