--- a/src/app/core/messages/view-all-messages/view-all-messages.component.scss
+++ b/src/app/core/messages/view-all-messages/view-all-messages.component.scss
@@ -10,14 +10,11 @@
 	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.298039215686275);
 	
 	.card-body{
-		padding: 10px;
-		p {
-			margin-bottom: 0;
-		}
+		padding: 1.5rem;
 	}
 
 	.col-alert-icon {
-		flex: 0 0 60px;
+		flex: 0 0 70px;
 		background-color: white;
 		display: flex;
 		justify-content: center;
