added a skip navigation link

--- a/src/app/core/admin/cache-entries/cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/cache-entries.component.html
@@ -1,8 +1,8 @@
 <section>
-	<h2>
+	<h1 skipTo>
 		Cache Entries
 		<small>Administer Cache Entries</small>
-	</h2>
+	</h1>
 
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
