--- a/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
@@ -1,8 +1,8 @@
 <section>
-	<h2>
+	<h1 skipTo>
 		EUAs
 		<small>Administer End User Agreements</small>
-	</h2>
+	</h1>
 
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
