--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -1,8 +1,8 @@
 <section>
-	<h2>
+	<h1 skipTo>
 		Users
 		<small>Administer User Accounts</small>
-	</h2>
+	</h1>
 
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
