--- a/src/app/core/messages/admin/list-messages.component.html
+++ b/src/app/core/messages/admin/list-messages.component.html
@@ -1,9 +1,9 @@
 <section>
 
-	<h2>
+	<h1 skipTo>
 		Messages
 		<small>Administer Messages</small>
-	</h2>
+	</h1>
 
 	<!-- Alert Notifications -->
 	<system-alert></system-alert>
