--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -1,6 +1,5 @@
-<div
-		 class="navbar-left d-flex flex-column align-items-start"
-		 [ngClass]="{'navbar-open': navbarOpen}">
+<div class="navbar-left d-flex flex-column align-items-start"
+  [ngClass]="{'navbar-open': navbarOpen}">
 
 	<!-- Logo -->
 	<ul class="nav nav-logo flex-shrink-0">
