--- a/src/app/core/admin/user-management/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/admin-list-users.component.html
@@ -18,8 +18,7 @@
 
 		<div class="col-md-10">
 			<div class="d-flex mb-3 align-items-center">
-				<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"
-								  style="width: 350px"></asy-search-input>
+				<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"></asy-search-input>
 				<div class="btn-group float-right dropdown ml-auto" dropdown>
 					<button type="button" class="btn btn-outline-secondary" (click)="exportCurrentView()"><span class="fa fa-download"></span> Export </button>
 					<button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" dropdownToggle></button>
