--- a/src/app/core/feedback/admin/admin-list-feedback.component.html
+++ b/src/app/core/feedback/admin/admin-list-feedback.component.html
@@ -9,8 +9,7 @@
 	<div class="pt-2">
 
 		<div class="d-flex mb-3 align-items-center">
-			<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"
-							  style="width: 350px"></asy-search-input>
+			<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"></asy-search-input>
 			<button type="button" class="btn btn-outline-secondary ml-auto" (click)="export()">
 				<span class="fa fa-download"></span> Export
 			</button>
