--- a/src/app/core/messages/view-all-messages/view-all-messages.component.html
+++ b/src/app/core/messages/view-all-messages/view-all-messages.component.html
@@ -7,8 +7,7 @@
 	<system-alert></system-alert>
 
 	<div class="pt-2 d-flex flex-column align-items-stretch ">
-		<asy-search-input class="mx-auto mb-4" placeholder="Search messages..." (applySearch)="onSearch($event)"
-						  style="width: 350px">
+		<asy-search-input class="mx-auto mb-4" placeholder="Search messages..." (applySearch)="onSearch($event)">
 		</asy-search-input>
 		<div class="p-2 text-center">
 			<div *ngIf="newMessages">
