--- a/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
@@ -14,8 +14,7 @@
 		</div>
 		<div class="col-md-10">
 			<div class="d-flex mb-3 align-items-center">
-				<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"
-								  style="width: 350px"></asy-search-input>
+				<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"></asy-search-input>
 				<button [routerLink]="['/admin/eua']" type="button" class="btn btn-primary ml-auto">
 					<span class="fa fa-plus"></span> Create EUA
 				</button>
