--- a/src/app/core/messages/admin/list-messages.component.html
+++ b/src/app/core/messages/admin/list-messages.component.html
@@ -10,8 +10,7 @@
 
 	<div class="pt-2">
 		<div class="d-flex mb-3 align-items-center">
-			<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)" style="width: 350px">
-			</asy-search-input>
+			<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"></asy-search-input>
 			<button [routerLink]="['/admin/message/']" type="button" class="btn btn-primary ml-auto">
 				<span class="fa fa-plus"></span> Create Message
 			</button>
