--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -10,8 +10,7 @@
 	<div class="pt-2">
 
 		<div class="d-flex mb-3 align-items-center">
-			<asy-search-input placeholder="Search teams..." (applySearch)="searchEvent$.next($event)"
-							  style="width: 350px"></asy-search-input>
+			<asy-search-input placeholder="Search teams..." (applySearch)="searchEvent$.next($event)"></asy-search-input>
 			<button routerLink="/team/create" type="button" class="btn btn-primary ml-auto">
 				<span class="fa fa-plus"></span> Create Team
 			</button>
