--- a/src/app/site/example/forms/forms.component.html
+++ b/src/app/site/example/forms/forms.component.html
@@ -50,9 +50,21 @@
 			</label>
 		</div>
 		<div class="form-check">
+			<input class="form-check-input" type="checkbox" value="" checked id="defaultCheck1">
+			<label class="form-check-label" for="defaultCheck1">
+				Default Checked checkbox
+			</label>
+		</div>
+		<div class="form-check">
 			<input class="form-check-input" type="checkbox" value="" id="defaultCheck2" disabled>
 			<label class="form-check-label" for="defaultCheck2">
 				Disabled checkbox
+			</label>
+		</div>
+		<div class="form-check">
+			<input class="form-check-input" type="checkbox" value="" id="defaultCheck2" checked disabled>
+			<label class="form-check-label" for="defaultCheck2">
+				Disabled and Checked checkbox
 			</label>
 		</div>
 	</div>
@@ -74,6 +86,12 @@
 			<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
 			<label class="form-check-label" for="exampleRadios3">
 				Disabled radio
+			</label>
+		</div>
+		<div class="form-check">
+			<input class="form-check-input" type="radio" name="exampleRadios2" id="exampleRadios4" value="option4" checked disabled>
+			<label class="form-check-label" for="exampleRadios3">
+				Disabled and Checked radio
 			</label>
 		</div>
 	</div>
