--- a/src/styles/_ng-select.scss
+++ b/src/styles/_ng-select.scss
@@ -13,9 +13,10 @@
 $ng-select-highlight: $input-focus-border-color !default;
 $ng-select-border: $input-border-color !default;
 $ng-select-border-radius: $border-radius !default;
-$ng-select-placeholder: $input-placeholder-color !default;
 $ng-select-box-shadow: get-box-shadow() !default;
-$ng-select-height: 35px !default;
+$ng-select-placeholder: $input-placeholder-color !default;
+$ng-select-height: $input-height !default;
+$ng-select-value-padding-left: $input-padding-x;
 
 @import '~@ng-select/ng-select/scss/default.theme';
 
