--- a/src/styles/ngx-bootstrap/_variables.scss
+++ b/src/styles/ngx-bootstrap/_variables.scss
@@ -49,10 +49,9 @@ $form-check-input-gutter:           0 !default;
 // Dropdown
 $dropdown-padding-y:				0 !default;
 $dropdown-spacer:					0 !default;
-$dropdown-bg:						$ux-color-light-gray !default;
 $dropdown-border-color:             $ux-color-dark-gray !default;
 $dropdown-box-shadow: 				0 1px 4px rgba(0, 0, 0, .3) !default;
-$dropdown-link-hover-bg:			$ux-color-medium-gray !default;
+$dropdown-link-hover-bg:			$ux-color-light-gray !default;
 
 $dropdown-item-padding-y:           10px !default;
 $dropdown-item-padding-x:			24px !default;
