--- a/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/admin-list-euas.component.html
@@ -13,7 +13,7 @@
 			<quick-column-toggle [filters]="columns" [defaultFilters]="defaultColumns" (filtersChange)="columnsUpdated($event)"></quick-column-toggle>
 		</div>
 		<div class="col-md-10">
-			<div class="d-flex mb-3 align-items-center">
+			<div class="d-flex mb-3">
 				<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"></asy-search-input>
 				<button [routerLink]="['/admin/eua']" type="button" class="btn btn-primary ml-auto">
 					<span class="fa fa-plus"></span> Create EUA
@@ -21,9 +21,11 @@
 			</div>
 
 			<pageable-table [items]="euas"
-				[pagingOptions]="pagingOpts"
-				(onPageChange)="goToPage($event)"
-				(onSortChange)="setSort($event)">
+							[hasItems]="hasEuas"
+							[pagingOptions]="pagingOpts"
+							[tableStriped]="true"
+							(onPageChange)="goToPage($event)"
+							(onSortChange)="setSort($event)">
 
 				<ng-template named-template="table-header">
 					<th *ngFor="let header of headersToShow">
@@ -44,27 +46,35 @@
 					<td [hidden]="!columns.updated.show">{{ eua.euaModel.updated | utcDate }}</td>
 					<td [hidden]="!columns.published.show">{{ eua.euaModel.published | utcDate }}</td>
 
-					<td style="width: 120px;">
-						<div class="btn-group btn-group-sm float-right">
-							<button title="Edit" [routerLink]="['/admin/eua',eua.euaModel._id]"
-								type="button" class="btn btn-outline-secondary">
-								<span class="fa fa-edit"></span>
-							</button>
-							<button title="Publish" (click)="publishEua(eua)"
-								type="button" class="btn btn-primary">
-								<span class="fa fa-share-square-o"></span>
-							</button>
-							<button title="Delete" (click)="confirmDeleteEua(eua)"
-								type="button" class="btn btn-danger">
-								<span class="fa fa-trash-o"></span>
-							</button>
-						</div>
+					<td class="text-right" style="max-width: 50px;">
+						<span dropdown container="body" placement="top left" class="border-left pl-2 py-1">
+							<span class="px-2" style="cursor: pointer;" dropdownToggle>
+								<span class="fa fa-lg fa-ellipsis-v"></span>
+							</span>
+							<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
+								<li>
+									<a class="dropdown-item" [routerLink]="['/admin/eua', eua.euaModel._id]">Edit</a>
+								</li>
+								<li>
+									<a class="dropdown-item" (click)="publishEua(eua)">Publish</a>
+								</li>
+								<li>
+									<a class="dropdown-item" (click)="confirmDeleteEua(eua)">Delete</a>
+								</li>
+							</ul>
+						</span>
 					</td>
 				</ng-template>
 
-				<ng-template named-template="empty-table">
-					<h2>
-						<small>No End User Agreements? Either there were no EUAs that matched your search or there are no EUAs in the system.</small>
+				<ng-template named-template="table-no-results">
+					<h2 class="text-center">
+						<small>No EUAs matched your search</small>
+					</h2>
+				</ng-template>
+
+				<ng-template named-template="table-no-data">
+					<h2 class="text-center">
+						<small>No EUAs are available</small>
 					</h2>
 				</ng-template>
 			</pageable-table>
