--- a/src/app/core/messages/admin/list-messages.component.html
+++ b/src/app/core/messages/admin/list-messages.component.html
@@ -9,13 +9,17 @@
 	<system-alert></system-alert>
 
 	<div class="pt-2">
-		<div class="d-flex mb-3 align-items-center">
+		<div class="d-flex mb-3">
 			<asy-search-input placeholder="Search..." (applySearch)="onSearch($event)"></asy-search-input>
 			<button [routerLink]="['/admin/message/']" type="button" class="btn btn-primary ml-auto">
 				<span class="fa fa-plus"></span> Create Message
 			</button>
 		</div>
-		<pageable-table [items]="messages" [pagingOptions]="pagingOpts" (onPageChange)="goToPage($event)">
+		<pageable-table [items]="messages"
+						[hasItems]="hasMessages"
+						[pagingOptions]="pagingOpts"
+						[tableStriped]="true"
+						(onPageChange)="goToPage($event)">
 
 			<ng-template named-template="table-header">
 				<th *ngFor="let header of headers">
@@ -30,16 +34,20 @@
 				<td>{{message.type}}</td>
 				<td>{{message.created | agoDate:false}}</td>
 				<td>{{message.updated | agoDate:false}}</td>
-				<td style="width: 120px;">
-					<div class="btn-group btn-group-sm float-right">
-						<button title="Edit" [routerLink]="['/admin/message', message._id]" type="button"
-							class="btn btn-outline-secondary">
-							<span class="fa fa-edit"></span>
-						</button>
-						<button title="Delete" (click)="confirmDeleteMessage(message)" type="button" class="btn btn-danger">
-							<span class="fa fa-trash-o"></span>
-						</button>
-					</div>
+				<td class="text-right" style="max-width: 50px;">
+					<span dropdown container="body" placement="top left" class="border-left pl-2 py-1">
+						<span class="px-2" style="cursor: pointer;" dropdownToggle>
+							<span class="fa fa-lg fa-ellipsis-v"></span>
+						</span>
+						<ul *dropdownMenu class="dropdown-menu dropdown-menu-right mt-2">
+							<li>
+								<a class="dropdown-item" [routerLink]="['/admin/message', message._id]">Edit</a>
+							</li>
+							<li>
+								<a class="dropdown-item" (click)="confirmDeleteMessage(message)">Delete</a>
+							</li>
+						</ul>
+					</span>
 				</td>
 			</ng-template>
 
